Checked in Merge Sort Code